Fixed css errors

--- a/src/main/resources/templates/logout.html
+++ b/src/main/resources/templates/logout.html
@@ -1,32 +1,32 @@
-<!DOCTYPE html>
-<html
-        xmlns:th="https://www.thymeleaf.org"
-        xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-        layout:decorate="~{base}">
+<!--<!DOCTYPE html>-->
+<!--<html-->
+<!--        xmlns:th="https://www.thymeleaf.org"-->
+<!--        xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"-->
+<!--        layout:decorate="~{base}">-->
 
-<head>
-    <title>Έξοδος</title>
-</head>
+<!--<head>-->
+<!--    <title>Έξοδος</title>-->
+<!--</head>-->
 
-<body>
+<!--<body>-->
 
-<main layout:fragment="main" class="container-sm content-main text-center">
+<!--<main layout:fragment="main" class="container-sm content-main text-center">-->
 
-    <h1 class="text-xl">Έξοδος</h1>
-    <p class="text-md mb-4" style="color: #666;">Είστε σίγουροι ότι θέλετε να αποσυνδεθείτε;</p>
+<!--    <h1 class="text-xl">Έξοδος</h1>-->
+<!--    <p class="text-md mb-4" style="color: #666;">Είστε σίγουροι ότι θέλετε να αποσυνδεθείτε;</p>-->
 
-    <br>
-    <form th:action="@{/logout}" method="post">
-        <div class="form-group text-center">
-            <button type="submit" class="btn btn-primary text-md"><i class="fas fa-sign-out-alt"></i> Αποσύνδεση τώρα</button>
-        </div>
+<!--    <br>-->
+<!--    <form th:action="@{/logout}" method="post">-->
+<!--        <div class="form-group text-center">-->
+<!--            <button type="submit" class="btn btn-primary text-md"><i class="fas fa-sign-out-alt"></i> Αποσύνδεση τώρα</button>-->
+<!--        </div>-->
 
-        <p style="margin-top: 20px;">
-            <a th:href="@{/profile}" style="color: var(--primary-color);">Επιστροφή στο Προφίλ</a>
-        </p>
-    </form>
+<!--        <p style="margin-top: 20px;">-->
+<!--            <a th:href="@{/profile}" style="color: var(&#45;&#45;primary-color);">Επιστροφή στο Προφίλ</a>-->
+<!--        </p>-->
+<!--    </form>-->
 
-</main>
+<!--</main>-->
 
-</body>
-</html>
+<!--</body>-->
+<!--</html>-->
